# pytng

./: .buildinfo  .coveragerc  .disable.travis.yml  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  environment.yaml  genindex.html  index.html  objects.inv  pyproject.toml  pytest.ini  requirements.txt  robots.txt  search.html  searchindex.js  setup.cfg  setup.py  sitemap.xml
.github/workflows/: build.yml  deploy.yaml  docs.yml  python-package.yml
_sources/documentation_pages/: Examples.rst.txt
_static/: alabaster.css  documentation_options.js  opensearch.xml
docs/: Makefile  conf.py  index.rst
docs/documentation_pages/: API.rst  Blocks.rst  Errors.rst
documentation_pages/: API.html  Blocks.html  Errors.html  Examples.html
pytng/: __init__.py  _version.py  pytng.pyx  pytng_block_iterator.pyx
pytng/include/tng/: tng_io.h  version.h
pytng/src/compression/: bwlzh.c
pytng/src/lib/: md5.c  tng_io.c
tests/: conftest.py  crash.py  profile_tng.py  test_coordinates.py  test_tng.py  test_tng_block_iterator.py  test_topology.py  testscript.py
tests/reference_files/: README  adk_oplsaa.tng  badtngfile.tng  water_npt_compressed_trjconv.tng
