[build-system]
# Minimum requirements for the build system to execute
requires = [
    "cython>=0.28,<3.0",
    "setuptools>=61.2",
    "versioningit",
    "wheel",
    # below matches MDA
    "numpy==1.22.3; python_version=='3.9' and platform_python_implementation != 'PyPy'",
    "numpy==1.22.3; python_version=='3.10' and platform_python_implementation != 'PyPy'",
    "numpy==1.23.2; python_version=='3.11' and platform_python_implementation != 'PyPy'",
    "numpy==1.26.0; python_version=='3.12' and platform_python_implementation != 'PyPy'",
    "numpy<2.0; python_version>='3.13'",
]
build-backend = "setuptools.build_meta"


[tool.versioningit]
default-version = "1+unknown"


[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"


[tool.versioningit.vcs]
method = "git" 
match = ["*"]
default-tag = "0.0.0"
